crates/parser/tests/snapshots/prefix_block_duplicate_across.snap
---
source: crates/parser/tests/snapshots.rs
---
# prefix-block-duplicate-across

## Input

```
i. {
  k a
}
i. {
  k b
}

```

## CST

```
SOURCE_FILE@0..26
  PREFIX_BLOCK@0..13
    WORD_KEY@0..2
      WORD@0..2 "i."
    SPACE@2..3 " "
    OPEN_BRACE@3..4 "{"
    NEWLINE@4..5 "\n"
    SPACE@5..7 "  "
    ENTRY@7..11
      WORD_KEY@7..8
        WORD@7..8 "k"
      SPACE@8..9 " "
      LINE_STRING@9..10
        STRING@9..10 "a"
      NEWLINE@10..11 "\n"
    CLOSE_BRACE@11..12 "}"
    NEWLINE@12..13 "\n"
  PREFIX_BLOCK@13..26
    WORD_KEY@13..15
      WORD@13..15 "i."
    SPACE@15..16 " "
    OPEN_BRACE@16..17 "{"
    NEWLINE@17..18 "\n"
    SPACE@18..20 "  "
    ENTRY@20..24
      WORD_KEY@20..21
        WORD@20..21 "k"
      SPACE@21..22 " "
      LINE_STRING@22..23
        STRING@22..23 "b"
      NEWLINE@23..24 "\n"
    CLOSE_BRACE@24..25 "}"
    NEWLINE@25..26 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..2 "i.",
            },
            open_brace: OPEN_BRACE@3..4 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@7..8 "k",
                    },
                    value: LineString {
                        string: STRING@9..10 "a",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@11..12 "}",
        },
        PrefixBlock {
            key: WordKey {
                word: WORD@13..15 "i.",
            },
            open_brace: OPEN_BRACE@16..17 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@20..21 "k",
                    },
                    value: LineString {
                        string: STRING@22..23 "b",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@24..25 "}",
        },
    ],
}
```

vim:ft=markdown
