crates/parser/tests/snapshots/prefix_block_empty.snap
---
source: crates/parser/tests/snapshots.rs
---
# prefix-block-empty

## Input

```
section {
}

```

## CST

```
SOURCE_FILE@0..12
  PREFIX_BLOCK@0..12
    WORD_KEY@0..7
      WORD@0..7 "section"
    SPACE@7..8 " "
    OPEN_BRACE@8..9 "{"
    NEWLINE@9..10 "\n"
    CLOSE_BRACE@10..11 "}"
    NEWLINE@11..12 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..7 "section",
            },
            open_brace: OPEN_BRACE@8..9 "{",
            items: [],
            close_brace: CLOSE_BRACE@10..11 "}",
        },
    ],
}
```

vim:ft=markdown
