crates/parser/tests/snapshots/prefix_block_empty_key.snap
---
source: crates/parser/tests/snapshots.rs
---
# prefix-block-empty-key

## Input

```
s {
  "" value1
  '' value2
}

```

## CST

```
SOURCE_FILE@0..30
  PREFIX_BLOCK@0..30
    WORD_KEY@0..1
      WORD@0..1 "s"
    SPACE@1..2 " "
    OPEN_BRACE@2..3 "{"
    NEWLINE@3..4 "\n"
    SPACE@4..6 "  "
    ENTRY@6..16
      QUOTED_KEY@6..8
        DOUBLE_QUOTE@6..7 "\""
        STRING@7..7 ""
        DOUBLE_QUOTE@7..8 "\""
      SPACE@8..9 " "
      LINE_STRING@9..15
        STRING@9..15 "value1"
      NEWLINE@15..16 "\n"
    SPACE@16..18 "  "
    ENTRY@18..28
      QUOTED_KEY@18..20
        SINGLE_QUOTE@18..19 "'"
        STRING@19..19 ""
        SINGLE_QUOTE@19..20 "'"
      SPACE@20..21 " "
      LINE_STRING@21..27
        STRING@21..27 "value2"
      NEWLINE@27..28 "\n"
    CLOSE_BRACE@28..29 "}"
    NEWLINE@29..30 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..1 "s",
            },
            open_brace: OPEN_BRACE@2..3 "{",
            items: [
                Entry {
                    key: QuotedKey {
                        open_quote: DOUBLE_QUOTE@6..7 "\"",
                        string: STRING@7..7 "",
                        close_quote: DOUBLE_QUOTE@6..7 "\"",
                    },
                    value: LineString {
                        string: STRING@9..15 "value1",
                    },
                },
                Entry {
                    key: QuotedKey {
                        open_quote: SINGLE_QUOTE@18..19 "'",
                        string: STRING@19..19 "",
                        close_quote: SINGLE_QUOTE@18..19 "'",
                    },
                    value: LineString {
                        string: STRING@21..27 "value2",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@28..29 "}",
        },
    ],
}
```

vim:ft=markdown
