crates/parser/tests/snapshots/prefix_block_hash_word.snap
---
source: crates/parser/tests/snapshots.rs
---
# prefix-block-hash-word

## Input

```
s {
  #format off
  key value
}

```

## CST

```
SOURCE_FILE@0..32
  PREFIX_BLOCK@0..32
    WORD_KEY@0..1
      WORD@0..1 "s"
    SPACE@1..2 " "
    OPEN_BRACE@2..3 "{"
    NEWLINE@3..4 "\n"
    SPACE@4..6 "  "
    COMMENT@6..17
      SHARP@6..7 "#"
      WORD@7..13 "format"
      SPACE@13..14 " "
      WORD@14..17 "off"
    NEWLINE@17..18 "\n"
    SPACE@18..20 "  "
    ENTRY@20..30
      WORD_KEY@20..23
        WORD@20..23 "key"
      SPACE@23..24 " "
      LINE_STRING@24..29
        STRING@24..29 "value"
      NEWLINE@29..30 "\n"
    CLOSE_BRACE@30..31 "}"
    NEWLINE@31..32 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..1 "s",
            },
            open_brace: OPEN_BRACE@2..3 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@20..23 "key",
                    },
                    value: LineString {
                        string: STRING@24..29 "value",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@30..31 "}",
        },
    ],
}
```

vim:ft=markdown
