crates/parser/tests/snapshots/prefix_block_indented_opening.snap
---
source: crates/parser/tests/snapshots.rs
---
# prefix-block-indented-opening

## Input

```
  section {
    key value
  }

```

## CST

```
SOURCE_FILE@0..30
  SPACE@0..2 "  "
  PREFIX_BLOCK@2..30
    WORD_KEY@2..9
      WORD@2..9 "section"
    SPACE@9..10 " "
    OPEN_BRACE@10..11 "{"
    NEWLINE@11..12 "\n"
    SPACE@12..16 "    "
    ENTRY@16..26
      WORD_KEY@16..19
        WORD@16..19 "key"
      SPACE@19..20 " "
      LINE_STRING@20..25
        STRING@20..25 "value"
      NEWLINE@25..26 "\n"
    SPACE@26..28 "  "
    CLOSE_BRACE@28..29 "}"
    NEWLINE@29..30 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@2..9 "section",
            },
            open_brace: OPEN_BRACE@10..11 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@16..19 "key",
                    },
                    value: LineString {
                        string: STRING@20..25 "value",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@28..29 "}",
        },
    ],
}
```

vim:ft=markdown
